feat: V1.2.0 - Complete three-in-one architecture with Content Script
V1.0 Web Version:
- Restore original 800px width layout with style_web.css
- Independent index.html for GitHub Pages

V2.0 Popup Extension Version:
- Create dedicated popup.html with simplified UI
- Add popup_style.css for 380px popup window
- manifest.json updated to point to popup.html

V3.0 Content Script Version:
- Implement content_script.js with enhanced DOM monitoring
- Add content_style.css for injected button styling
- Fix manifest.json matches for precise iflow.cn targeting
- Enhanced command detection with multiple search strategies
- Added debug logging for troubleshooting

Documentation:
- Completely updated README.md and README_EN.md
- Added detailed three-version usage instructions
- Updated project structure documentation
- Added comprehensive changelog for v1.2.0

Architecture:
- Three completely independent versions
- No code fusion between versions
- Precise targeting for content scripts
- Enhanced error handling and user feedback

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,14 @@
 {
   "manifest_version": 3,
   "name": "iflow MCP 助手 (PowerShell)",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "一键转换 iflow MCP 命令为 PowerShell 7 兼容格式。",
   "action": {
     "default_popup": "popup.html",
+    "default_icon": {
+      "16": "images/icon16.png",
+      "48": "images/icon48.png"
+    },
     "default_title": "iflow MCP 助手"
   },
   "icons": {
@@ -14,5 +18,15 @@
   },
   "permissions": [
     "clipboardWrite"
+  ],
+  "content_scripts": [
+    {
+      "matches": [
+        "https://platform.iflow.cn/mcp",
+        "https://platform.iflow.cn/mcp/*"
+      ],
+      "js": ["content_script.js"],
+      "css": ["content_style.css"]
+    }
   ]
 }
